[package]
name = "async-await-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
scraper = "0.20"
tokio = { version = "1", default-features = false, features = [
    "fs",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = "0.1"

[lib]
name = "lib"
path = "src/lib.rs"
